--- a/proposals/sip-0001.md
+++ b/proposals/sip-0001.md
@@ -248,7 +248,7 @@ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND 
 [lip-0001]:         https://github.com/LiskHQ/lips/blob/master/proposals/lip-0001.md "LIP-0001"
 [cc0]:              https://creativecommons.org/publicdomain/zero/1.0/              "Creative Commons Zero 1.0 Universal"
 [sips-email]:       mailto:info@sushichain.io                                       "info@sushichain.io"
-[sips-process-img]: sip-0001/sip-0001-1.png                                         "SIP Process"
+[sips-process-img]: SIP-0001/sip-0001-1.png                                         "SIP Process"
 [sips-repo]:        https://github.com/SushiChain/SIPS                              "SIPs git repository"
 [sips-issue-tracker]: https://github.com/SushiChain/SIPS/issues                      "SIPs issue tracker"
 [sips-template]:    ../template.md                                                  "SIP template"
